# attorney

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run_bot.py  start.sh
backend/app/: bot.py  config.py  database.py  main.py  models.py  schemas.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css
frontend/src/components/About/: About.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Form/: ConsultationForm.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/Hero/: Hero.tsx
frontend/src/components/Map/: MapBlock.tsx
frontend/src/components/Partners/: Partners.tsx
frontend/src/components/Reviews/: Reviews.tsx
frontend/src/components/SEO/: SEOHead.tsx
frontend/src/pages/CivilLaw/: CivilLaw.tsx
frontend/src/pages/Contacts/: Contacts.tsx
frontend/src/pages/CriminalLaw/: CriminalLaw.tsx
frontend/src/pages/FamilyLaw/: FamilyLaw.tsx
frontend/src/pages/FreeHelp/: FreeHelp.tsx
frontend/src/pages/Home/: Home.tsx
frontend/src/pages/Prices/: Prices.tsx
frontend/src/types/: index.ts
